@@ -1,0 +1,3 @@
+usr/include/*/qt5/QtWebSockets/5.*
+usr/lib/*/libQt5WebSockets.la
+usr/lib/*/qt5/mkspecs/modules/qt_lib_websockets_private.pri
