@@ -3,6 +3,7 @@ qtwebsockets-opensource-src (5.12.5-1) UNRELEASED; urgency=medium
   [ Dmitry Shachnev ]
   * New upstream release.
   * Bump Qt build-dependencies to 5.12.5.
+  * Simplify debian/rules by using the debian/not-installed file.
 
  -- Scarlett Moore <sgmoore@kde.org>  Fri, 09 Aug 2019 11:13:52 -0700
 
